--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "lodash": "~2.4.1",
     "angular-validation-match": "~1.5.2",
     "susy": "~2.2.12",
-    "bourbon": "~4.2.7"
+    "bourbon": "~4.2.7",
+    "ng-file-upload": "~12.0.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
