--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "angular-validation-match": "~1.5.2",
     "susy": "~2.2.12",
     "bourbon": "~4.2.7",
-    "ng-file-upload": "~12.0.4"
+    "ng-file-upload": "~12.0.4",
+    "angular-gravatar": "~0.4.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
