--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "susy": "~2.2.12",
     "bourbon": "~4.2.7",
     "ng-file-upload": "~12.0.4",
-    "angular-gravatar": "~0.4.2"
+    "angular-gravatar": "~0.4.2",
+    "ng-img-crop": "ngImgCrop#~0.3.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
