--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,9 @@
     "bourbon": "~4.2.7",
     "ng-file-upload": "~12.0.4",
     "angular-gravatar": "~0.4.2",
-    "ng-img-crop": "ngImgCrop#~0.3.2"
+    "ng-img-crop": "ngImgCrop#~0.3.2",
+    "medium-editor": "~5.16.1",
+    "angular-medium-editor": "~1.1.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
