--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "angular-gravatar": "~0.4.2",
     "medium-editor": "~5.16.1",
     "angular-medium-editor": "~1.1.1",
-    "ng-img-crop-full-extended": "ngImgCropFullExtended#~0.5.5"
+    "ng-img-crop-full-extended": "ngImgCropFullExtended#~0.5.5",
+    "headroom.js": "https://npmcdn.com/headroom.js/bower.zip"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
