--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "medium-editor": "~5.16.1",
     "angular-medium-editor": "~1.1.1",
     "ng-img-crop-full-extended": "ngImgCropFullExtended#~0.5.5",
-    "headroom.js": "https://npmcdn.com/headroom.js/bower.zip"
+    "headroom.js": "https://npmcdn.com/headroom.js/bower.zip",
+    "angular-busy-plus": "~4.1.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
