--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "multiparty": "^4.1.2",
     "passport": "~0.3.0",
     "passport-local": "^1.0.0",
+    "prerender-node": "^2.2.2",
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
