--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "angular-medium-editor": "~1.1.1",
     "ng-img-crop-full-extended": "ngImgCropFullExtended#~0.5.5",
     "headroom.js": "https://npmcdn.com/headroom.js/bower.zip",
-    "angular-busy-plus": "~4.1.5"
+    "angular-busy-plus": "~4.1.5",
+    "angular-update-meta": "~1.9.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
